<resources>
    <string name="app_name">Sistema de adopción de gatitos</string>
    <string name="text_value_bienvenida">¡Bienvenido!</string>
    <string name="text_value_instruccion">Ingresa tus datos para continuar.</string>
    <string name="hint_correo_electronico">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="check_text_gatos">Incluir imágenes de gatos</string>
    <string name="continuar">Continuar</string>
    <string name="verifica_email">Por favor, ingresa un correo electrónico válido.</string>
    <string name="abrir_drawer">Abrir</string>
    <string name="cerrar_drawer">Cerrar</string>
    <string name="gatos">Gatos</string>
    <string name="gatos_info1">Al igual que sus parientes salvajes, los\ngatos domésticos son cazadores natos\ncapaces de acechar a sus presas y\nabalanzarse sobre ellas con sus garras y\ndientes.</string>
    <string name="gatos_info2">Los gatos domésticos, compañeros de\nnuestras vidas desde tiempos remotos, han\nestado junto a nosotros durante milenios.\nSea cual sea su raza, todos los gatos\ndomésticos pertenecen a la especie\nFelis silvestris catus</string>
    <string name="mostrar_gatitos">Mostrar gatitos</string>
    <string name="gato2">Foto de un gato mirando hacia arriba de manera tierna.</string>
    <string name="gato1">Foto de un gato negro</string>
    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="info_gatos_titulo">Acerca de (gatos)</string>
    <string name="fotos_gatitos_titulo">Adopta un gatito</string>
    <string name="item1">Ayuda</string>
    <string name="item2">Cambiar contraseña</string>
    <string name="item3">Ejemplos de uso</string>
    <string name="registro">Registro</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="confirma_contrase_a">Confirma contraseña</string>
    <string name="verifica_largo_contraseña">La contraseña debe tener al menos 8 caracteres.</string>
    <string name="verifica_contraseña_igual">Las contraseñas no coinciden. Intenta de nuevo.</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="opcion_crear_cuenta">¿No tienes una cuenta? Regístrate</string>
    <string name="recordarme">Recordarme</string>
    <string name="tipo_de_usuario">Tipo de usuario</string>
    <string name="perfil">Perfil</string>
    <string name="imagen_perfil">La imagen que sera mostrada en el perfil del usuario</string>
    <string name="sin_valor">-</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="contraseña_incorrecta">La contraseña es incorrecta.</string>
    <string name="usuario_no_existe">El usuario no fue encontrado.</string>
    <string name="gato_adopcion_instruccion">Toca un gatito para adoptar</string>
</resources>